--- a/06_AppWeb_VistaUsuario_JSP/nbproject/project.properties
+++ b/06_AppWeb_VistaUsuario_JSP/nbproject/project.properties
@@ -42,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.derby.jar}:\
     ${file.reference.derbyclient.jar}:\
-    ${file.reference.derbynet.jar}
+    ${file.reference.derbynet.jar}:\
+    ${reference.06_ProyectoUsuarios_BBDD.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -72,6 +73,8 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.06_ProyectoUsuarios_BBDD=../06_ProyectoUsuarios_BBDD
+reference.06_ProyectoUsuarios_BBDD.jar=${project.06_ProyectoUsuarios_BBDD}/dist/06_ProyectoUsuarios_BBDD.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
