--- a/07_MVN_VistaUsuario/pom.xml
+++ b/07_MVN_VistaUsuario/pom.xml
@@ -22,6 +22,11 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.vn.appusuarios.modelo</groupId>
+			<artifactId>07_MVN_ModeloUsuario</artifactId>
+			<version>0.0.1.0-SNAPSHOT</version>
+		</dependency>
 
 	</dependencies>
 	<build>
