--- a/07_MVN_VistaUsuario/pom.xml
+++ b/07_MVN_VistaUsuario/pom.xml
@@ -8,13 +8,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>07_MVN_VistaUsuario Maven Webapp</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -33,6 +33,11 @@
 			<groupId>com.vn.appusuarios.modelo</groupId>
 			<artifactId>07_MVN_ModeloUsuario</artifactId>
 			<version>0.0.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
 		</dependency>
 
 	</dependencies>
