commit empezando angular, ejemplos de node y typeScript

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ nbdist/
 /07_MVN_ModeloUsuario/target/
 /.metadata/
 /07_MVN_ModeloUsuario/bin/target/
+/07_MVN_VistaUsuario/.settings
+/07_MVN_ModeloUsuario/.settings
